--- a/procfile
+++ b/procfile
@@ -1,1 +1,3 @@
-web: gunicorn -b 0.0.0.0:$PORT main:app --workers 2 --threads 4
+web: gunicorn -b 0.0.0.0:$PORT main:app --workers 4 --threads 2 --timeout 120 --keepalive 2 --max-requests 1000 --max-requests-jitter 100 --preload
+worker: python -m celery worker --loglevel=info
+beat: python -m celery beat --loglevel=info
