--- a/requirements.txt
+++ b/requirements.txt
@@ -12,13 +12,13 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
-cors==1.0.1
 deprecation==2.1.0
 dnspython==2.7.0
 eventlet==0.38.2
 filelock==3.16.1
 Flask==3.1.0
 Flask-APScheduler==1.13.1
+Flask-Cors==4.0.1
 Flask-SocketIO==5.5.1
 frozenlist==1.5.0
 future==1.0.0
@@ -42,7 +42,6 @@ multidict==6.1.0
 packaging==24.2
 postgrest==0.19.1
 propcache==0.2.1
-
 pycparser==2.22
 pydantic==2.10.4
 pydantic_core==2.27.2
@@ -72,17 +71,8 @@ wsproto==1.2.0
 yarl==1.18.3
 zope.event==5.0
 zope.interface==7.2
-mercadopago==2.2.3
-Pillow>=10.0.0
-reportlab>=3.6.0
+Pillow==10.4.0
+reportlab==3.6.13
 waitress==3.0.2
 pywebpush==2.0.3
-
-
-
-
-python-dotenv>=1.0.0
-werkzeug>=2.3.0
-
-
-
+python-dotenv==1.0.1
