--- a/render.yaml
+++ b/render.yaml
@@ -1,26 +1,26 @@
-
 services:
   - type: web
     name: sua-agenda-flask
     env: python
     plan: starter
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -b 0.0.0.0:$PORT main:app --workers 4 --threads 2 --timeout 120 --keepalive 2
+    startCommand: gunicorn main:app --workers 2 --threads 2 --timeout 120 --keep-alive 2
     autoDeploy: true
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.11
       - key: FLASK_ENV
         value: production
       - key: FLASK_DEBUG
         value: False
       - key: GUNICORN_WORKERS
-        value: 4
+        value: 2
       - key: GUNICORN_THREADS
         value: 2
       - key: GUNICORN_TIMEOUT
         value: 120
       - key: LOG_LEVEL
         value: INFO
-    runtime: python3.11
     disk:
       name: flask-uploads
       mountPath: /opt/render/project/src/static/uploads
